[project]
name = "facefusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio-rangeslider==0.0.8",
    "gradio==5.25.2",
    "numpy==2.2.4",
    "onnx==1.17.0",
    "onnxruntime==1.22.0",
    "opencv-python==4.11.0.86",
    "psutil==7.0.0",
    "scipy==1.15.2",
    "tensorrt==10.12.0.36",
    "tqdm==4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
